# esp32p4-mipi-display

./: README.md
01.firmware/source-code/: sdkconfig  sdkconfig.old
01.firmware/source-code/components/bsp/include/: bsp.h
01.firmware/source-code/components/esp_lcd_st7703/: CMakeLists.txt  esp_lcd_st7703.c
01.firmware/source-code/components/esp_lcd_st7703/include/: esp_lcd_st7703.h
01.firmware/source-code/components/lvgl__lvgl/env_support/cmake/: esp.cmake
01.firmware/source-code/components/lvgl__lvgl/src/extra/libs/fsdrv/: lv_fs_fatfs.c
01.firmware/source-code/main/: CMakeLists.txt  idf_component.yml  main.c
01.firmware/source-code/main/lvgl_port/: audio_player.c  lock_page.c  main_page.c  page_manager.c  photo_album.c  show_jpg.c  video_player.c
01.firmware/source-code/main/lvgl_port/include/: page_manager.h  ui.h
