idf_component_register(SRCS "test.c"

                            "lvgl_port/main_page.c" "lvgl_port/lock_page.c"
                            "lvgl_port/show_jpg.c" "lvgl_port/show_video.c" 
                            "lvgl_port/photo_album.c"


                    INCLUDE_DIRS "."  "lvgl_port/include"
                    )